spacing fix

--- a/src/styl/sections/homepage.styl
+++ b/src/styl/sections/homepage.styl
@@ -117,6 +117,11 @@ h1, h2, h4, p{
 		font-size 22px
 	}
 }
+.full-width-img {
+	.img-responsive { 
+	margin auto
+	}	
+} 
 
 /* section 4 css */
 .blog_post{
